[package]
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
description = "no_std Aggregate BLS Signatures"
documentation = "https://docs.rs/bls-signatures"
edition = "2021"
homepage = "https://github.com/filecoin-project/bls-signatures"
license = "MIT OR Apache-2.0"
name = "bls-signatures"
readme = "README.md"
repository = "https://github.com/filecoin-project/bls-signatures"
resolver = "2"
rust-version = "1.77.0"
version = "0.15.0"

[[example]]
name = "verify"

[dependencies]
acid_io = { version = "0.1.0", git = "https://github.com/dataphract/acid_io" }

rand_core = { version = "0.6.0", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }

ff = { version = "0.13", default-features = false }
group = { version = "0.13", default-features = false }
pairing_lib = { version = "0.23.0", package = "pairing", default-features = false }

bls12_381 = { version = "0.8.0", optional = true, features = ["experimental"] }
hkdf = { version = "0.11.0", optional = true, default-features = false }
sha2 = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
base64-serde = "0.6.1"
rand = "0.8"
rand_chacha = "0.3.1"

[features]
default = ["pairing", "std"]
pairing = ["bls12_381", "sha2", "hkdf"]
std = ["acid_io/std", "ff/std", "rand_core/std", "sha2/std"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
